...
                    .align(Alignment.BottomCenter)
                    .padding(24.dp),
                // Using onPrimary ensures text visibility and contrast in both light and dark modes
                colors = ButtonDefaults.buttonColors(contentColor = MaterialTheme.colorScheme.onPrimary)
            )
            {
                Text("Stop Tracking")
            }
        }
    } else {
        // Idle state: Centered button to initiate tracking and permission requests
        Box(
            modifier = modifier.fillMaxSize(),
...
                    } else {
                        permissionState.launchMultiplePermissionRequest()
                    }
                },
                colors = ButtonDefaults.buttonColors(contentColor = MaterialTheme.colorScheme.onPrimary)
            ) {
                Text("Start Tracking Route")
            }
        }
    }
}

